# ai-bug-triage

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bug_triage_assistant/: __init__.py  __main__.py  cli.py  schema.py  triage.py
samples/: login_bug.txt  mobile_checkout_bug.txt
tests/: test_cli.py  test_schema.py
